quick mobile overflow fix
Will rework the site using a grid system in the near future (instead of using margins, woops)

--- a/css/style.css
+++ b/css/style.css
@@ -824,12 +824,18 @@ body {margin:0; overflow-x: hidden;}
     margin-right: 20%;
   }
 
+  #feedback-panel {
+    padding-left: 10%;
+    height: 1100px;
+  }
+
   #feedback-panel form {
-    margin-right: 40%;
+    margin-right: 20%;
   }
 
   #feedback-panel p {
-    margin-right: 40%;
+    margin-right: 20%;
+    max-width: 50%;
   }
 
   #feedback-panel h1 {
